@@ -1,7 +1,7 @@
 /*
  * DatabaseCapable.java
  *
- * Copyright 2009 Patrick Mairif.
+ * Copyright 2009-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * tabstop=4, charset=UTF-8
@@ -13,6 +13,11 @@ import java.sql.Connection;
 /**
  * Capable of handling a database.
  * 
+ * <p>Does this action need a database connection?
+ * The controller will only connect to the database, if this interface is implemented.
+ * On the other hand, an exception will be thrown, if this interface is implemented
+ * but the DB connection is not configured. </p>
+ * 
  * @author pmairif
  */
 public interface DatabaseCapable {
@@ -20,15 +25,4 @@ public interface DatabaseCapable {
 	 * set database connection
 	 */
 	public void setDatabase(Connection con);
-	
-	/**
-	 * does this action need a database connection?
-	 * 
-	 * <p>The controller will only connect to the database, if this method returns true.
-	 * On the other hand, an exception will be thrown, if this method returns true,
-	 * but the DB connection is not configured. </p>
-	 * 
-	 * @return true, if DB connection is needed
-	 */
-	public boolean needsDatabase();
 }
