@@ -1,7 +1,7 @@
 /*
  * JsonAction.java
  *
- * Copyright 2009-2010 Patrick Mairif.
+ * Copyright 2009-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * tabstop=4, charset=UTF-8
@@ -11,14 +11,12 @@ package de.highbyte_le.weberknecht.request.actions;
 import org.json.JSONException;
 import org.json.JSONWriter;
 
-import de.highbyte_le.weberknecht.request.DatabaseCapable;
-
 /**
  * webapp actions producing JSON data (see http://www.json.org/)
  * 
  * @author pmairif
  */
-public interface JsonAction extends DatabaseCapable, ExecutableAction {
+public interface JsonAction extends ExecutableAction {
 	/**
 	 * create the JSON data.
 	 * 
