@@ -3,6 +3,7 @@ next (1.0):
 	- Controller moved to de.highbyte_le.weberknecht.Controller
 	- DataAction2 renamed to DataAction
 	- DataAction.writeData() throws ActionExecutionException
+	- The method needsDatabase of the interface DatabaseCapable was droped and actions that need a database just have to implement the interface.
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
